# data-structures-project

./: pyproject.toml
homework-3/: main.py
src/: queue.py  stack.py
tests/: test_queue.py  test_stack.py
