[tool.poetry]
name = "data-structures-project"
version = "0.1.0"
description = ""
authors = ["Artemii Dovzhenko <rockenny@ymail.com>"]
readme = "README.md"
packages = [{include = "data_structures_project"}]

[tool.poetry.dependencies]
python = "^3.11"
coverage = "^7.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
